k8s/mediaserver/jackett/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: mediaserver
  labels:
    app: jackett
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      tolerations:
        - key: "arm"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
      containers:
        - name: jackett
          image: ghcr.io/linuxserver/jackett:0.24.498
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /downloads
              name: downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jackett-pvc-pve
        - name: downloads
          nfs:
            server: nas.enricoruggieri.com
            path: /tank-data/media/torrents/
