k8s/mediaserver/jackett/service-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett
  namespace: mediaserver
spec:
  type: ClusterIP
  selector:
    app: jackett
  ports:
    - port: 9118
      targetPort: 9117
