k8s/mediaserver/jackett/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett-service
  namespace: mediaserver
spec:
  type: LoadBalancer
  selector:
    app: jackett
  ports:
    - port: 9117
