k8s/mediaserver/jackett/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett
  namespace: mediaserver
spec:
  ingressClassName: nginx
  rules:
    - host: "jackett.enricoruggieri.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: jackett-service
                port:
                  number: 9117
